--- a/src/css/quasar.variables.scss
+++ b/src/css/quasar.variables.scss
@@ -13,7 +13,7 @@
 // Tip: Use the "Theme Builder" on Quasar's documentation website.
 
 $primary: #186815;
-$secondary: #26a69a;
+$secondary: #1a796f;
 $accent: #9c27b0;
 
 $dark: #1d1d1d;
